<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_people"
            android:title="@string/customers" />

        <item
            android:id="@+id/nav_create_customer"
            android:icon="@drawable/ic_person_add"
            android:title="@string/create_customer" />

        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_history"
            android:title="@string/transactions" />

        <item
            android:id="@+id/nav_rates"
            android:icon="@drawable/ic_percent"
            android:title="@string/interest_rates" />

    </group>

    <item android:title="@string/settings">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
