<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_account_wallet"
            android:title="@string/accounts" />

        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_history"
            android:title="@string/transactions" />

        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_transfer"
            android:title="@string/transfer" />

        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_payment"
            android:title="@string/bill_payment" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_location"
            android:title="@string/find_branch" />

    </group>

    <item android:title="@string/settings">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
